styles/32_game_entry: fixup regression of image overflow in game description

--- a/webroot/styles/32_game_entry.css
+++ b/webroot/styles/32_game_entry.css
@@ -25,7 +25,8 @@
 }
 
 .game_entry .media > *,
-.game_entry .media img {
+.game_entry .media img,
+.game_entry .description img {
 	margin-bottom: 16px;
 	width: 100%;
 	max-width: 100%;
